--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 logging.level.org.springframework.transaction.interceptor=TRACE
+
+logging.file.path = ./
+logging.file.name = log_file.log
